# AgenticStorageRAG

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  PATTERNS.md  README.md  dev.sh  docker-compose.yml
.agent-state/: features.json  progress.md
.github/workflows/: ci-backend.yml  ci-frontend.yml  deploy.yml  security.yml
.planning/: handoff.md  plan.md  spec.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 625bfe821ca8_merge_claude_oauth_and_artifacts_.py  a1b2c3d4e5f6_add_claude_oauth_to_settings.py  a1b2c3d4e5f6_add_openrouter_api_key_to_settings.py  a538f73ff58d_initial_schema.py  b2c4d6e8f0a1_unique_drive_file_id_index.py  c3d5e7f9a1b2_add_user_model_settings.py  d4e6f8a0b2c3_widen_document_file_type_to_200.py  d5f7a9b1c3e4_add_thinking_blocks_to_messages.py  e5f7a9b1c3d4_make_document_storage_path_nullable.py  e5f7a9b1c3d5_add_app_config_table.py  ebed0ac26499_merge_oauth_and_app_config_branches.py  f1a2b3c4d5e6_add_claude_oauth_to_settings.py  f6e5d4c3b2a1_add_indexed_files_table.py  g7h8i9j0k1l2_add_oauth_accounts.py  h8i9j0k1l2m3_add_stage_to_indexed_files.py  i9j0k1l2m3n4_add_artifacts_table.py  j1k2l3m4n5o6_add_chat_attachments_table.py  k2l3m4n5o6p7_replace_claude_oauth_with_use_claude_code.py  l3m4n5o6p7q8_add_steps_json_to_messages.py
backend/app/: __init__.py  celery_app.py  config.py  dependencies.py  main.py  test_health.py
backend/app/domain/agents/: README.md  attachments.py  chat_service.py  exceptions.py  interfaces.py  models.py  rag_agent.py  router.py  schemas.py
backend/app/domain/agents/tests/: __init__.py  test_artifacts.py  test_chat_service.py  test_exceptions.py  test_fetch_document.py  test_rag_agent.py  test_router_proxies.py  test_tools.py
backend/app/domain/agents/tools/: __init__.py  fetch_document.py  generate_document.py  graph_search.py  hybrid_search.py  vector_search.py
backend/app/domain/auth/: README.md  exceptions.py  interfaces.py  models.py  password.py  router.py  schemas.py  service.py  token.py
backend/app/domain/auth/oauth/: __init__.py  base.py  google.py  router.py  service.py
backend/app/domain/auth/oauth/tests/: test_google_provider.py  test_login_guard.py  test_oauth_service.py
backend/app/domain/auth/tests/: test_exceptions.py  test_password.py  test_router.py  test_service.py  test_token.py
backend/app/domain/documents/: README.md  __init__.py  exceptions.py  interfaces.py  jobs.py  models.py  router.py  schemas.py  service.py  tasks.py
backend/app/domain/documents/processors/: __init__.py  _pdf_worker.py  base.py  docx.py  pdf.py
backend/app/domain/documents/tests/: test_base_processor.py  test_docx_processor.py  test_pdf_processor.py  test_registry.py  test_router.py  test_service.py  test_tasks.py
backend/app/domain/ingestion/: README.md  __init__.py  drive_connector.py  exceptions.py  file_processor.py  interfaces.py  jobs.py  models.py  orchestrator.py  orchestrator_tools.py  pipeline.py  registry.py  router.py  scanner.py  schemas.py  service.py  swarm.py  tasks.py
backend/app/domain/ingestion/tests/: __init__.py  test_drive_connector.py  test_exceptions.py  test_orchestrator.py  test_pipeline.py  test_registry.py  test_router.py  test_schemas.py  test_service.py  test_swarm.py  test_tasks.py
backend/app/domain/knowledge/: README.md  exceptions.py  graph_service.py  hybrid_retriever.py  interfaces.py  kg_builder.py  models.py  router.py  schemas.py  vector_service.py
backend/app/domain/knowledge/tests/: __init__.py  test_exceptions.py  test_graph_service.py  test_hybrid_retriever.py  test_kg_builder.py  test_vector_service.py
backend/app/domain/settings/: claude_oauth.py  exceptions.py  interfaces.py  models.py  router.py  schemas.py  service.py
backend/app/domain/settings/tests/: test_settings_service.py
backend/app/infra/: claude_code.py  database.py  encryption.py  llm.py  logging_utils.py  middleware.py  neo4j_client.py  rate_limiter.py  redis_client.py  security_headers.py  storage.py  worker.py
backend/app/infra/tests/: test_database.py  test_encryption.py  test_llm.py  test_logging_utils.py  test_middleware.py  test_neo4j_client.py  test_rate_limiter.py  test_redis_client.py  test_security_headers.py  test_storage.py  test_worker.py
backend/app/scripts/: google_auth.py  graph_export.py  graph_import.py  graph_schema.py  seed.py
backend/app/tests/: test_config.py  test_integration_auth.py  test_integration_chat.py  test_integration_documents.py
backend/graph_seed/: manifest.json
backend/graph_seed/schema/: constraints.cypher
contracts/: openapi.yaml
docs/: claude-ai-computer-architecture.md  deployment.md  development.md  dual-chat-processor-architecture.md  knowledge-seeding.md  self-hosting.md
docs/designs/: add-auth-rate-limiting.md  add-security-headers-and-config-hardening.md  fix-critical-router-security.md  replace-python-jose-with-pyjwt.md  tighten-mypy-and-minor-hardening.md
docs/plans/: 2026-03-18-agent-refactor.md  2026-03-18-celery-worker-migration.md  2026-03-18-per-user-model-settings-design.md  2026-03-18-per-user-model-settings.md  2026-03-20-azure-ethos-design-system.md  2026-03-20-chat-attachments-design.md  2026-03-21-fetch-document-tool-design.md  2026-03-21-multilingual-agent-design.md
frontend/: Dockerfile  docker-entrypoint.sh  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/.planning/: plan.md  spec.md
frontend/__tests__/: home.test.tsx  use-auth.test.tsx  use-chat.test.ts  use-documents.test.ts  use-knowledge.test.ts
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/hooks/: use-auth.tsx  use-chat.ts  use-documents.ts  use-drive-tree.ts  use-ingestion.ts  use-knowledge.ts  use-mobile.ts  use-model-settings.ts
(+63 files in other folders)
