[project]
name = "openrag"
version = "0.1.0"
description = "Agentic Knowledge Graph RAG system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "email-validator>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.19",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "litellm>=1.55.0",
    "neo4j>=5.27.0",
    "supabase>=2.11.0",
    "pymupdf4llm>=0.0.17",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "tiktoken>=0.8.0",
    "google-auth>=2.36.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.160.0",
    "psycopg2-binary>=2.9.11",
    "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "types-passlib>=1.7.7",
    "types-python-jose>=3.3.4",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # function calls in argument defaults (FastAPI Depends pattern)
    "B017",   # pytest.raises(Exception) is fine in tests
    "N818",   # exception naming convention — renaming would break imports
    "RUF001", # ambiguous unicode in strings (en dashes are intentional)
    "RUF002", # ambiguous unicode in docstrings
    "RUF006", # fire-and-forget tasks are intentional
    "N806",   # uppercase variable names in functions (used for local constants)
    "SIM105", # contextlib.suppress vs try/except/pass is stylistic
    "UP042",  # StrEnum migration deferred (runtime compat)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
disable_error_code = [
    # Re-enabled: "attr-defined", "return-value", "assignment"
    "no-untyped-def",
    "import-untyped",
    "method-assign",
    "arg-type",
    "union-attr",
    "override",
    "var-annotated",
    "misc",
    "func-returns-value",
]

[[tool.mypy.overrides]]
module = ["neo4j.*", "supabase.*", "litellm.*", "langchain.*", "langchain_anthropic.*", "langchain_openai.*", "claude_agent_sdk.*", "google_auth_oauthlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["app"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=app --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
